fix logo z-index

--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -56,6 +56,7 @@ body {
 .nav__logo {
   margin-top: 5rem;
   margin-left: 43%;
+  z-index: 999;
 }
 .nav__logo > img {
   width: 100px;
