--- a/src/Styles/sass/components/_navbar.scss
+++ b/src/Styles/sass/components/_navbar.scss
@@ -8,6 +8,7 @@
   &__logo {
     margin-top: 5rem;
     margin-left: 43%;
+    z-index: 999;
 
     & > img {
       width: 100px;
